# ch32fun-cmake-template

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_flash.sh
include/: funconfig.h
src/: main.c
